# ai_invoice_submission

./: .env.example  .gitignore  LICENSE  MCP_Submission.md  README.md  app.py  invoice_auto_submit_1080p (1).mp4:Zone.Identifier  pyproject.toml
src/: bda_client.py  result_processor.py
