[project]
name = "invoice-submission"
version = "0.1.0"
description = "Amazon Bedrock Data Automation for invoice processing"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []